<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChooseActivity"
    android:background="@color/my_pryme_color"

    >

    <TextView
        android:id="@+id/textTax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="casual"
        android:text="@string/text_tax"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTax"
        android:layout_marginTop="70sp"
        android:layout_marginStart="70sp">

        <RadioButton
            android:id="@+id/hr_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_1_hr"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/hr_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_2_hr"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/hr_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_3_hr"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/hr_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_6_hr"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/hr_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_12_hr"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RadioGroup>

    <Button
        android:id="@+id/choose_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rGroup"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/text_btn_apply"
        android:textColor="@color/my_pryme_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_Info_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_below="@+id/choose_btn"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />



</RelativeLayout>